@@ -104,6 +104,9 @@ int CmdProjects::execute (std::string& output)
     view.add (Column::factory ("string",       STRING_COLUMN_LABEL_PROJECT));
     view.add (Column::factory ("string.right", STRING_COLUMN_LABEL_TASKS));
 
+    Color label (context.config.get ("color.label"));
+    view.colorHeader (label);
+
     std::vector <std::string> processed;
     std::map <std::string, int>::iterator project;
     for (project = unique.begin (); project != unique.end (); ++project)
